(fix): Fix flyout overlays (#463); fix mature wrapper word wrap

--- a/src/app/modules/newsfeed/poster/poster.component.scss
+++ b/src/app/modules/newsfeed/poster/poster.component.scss
@@ -328,6 +328,11 @@ m-hashtags-selector {
       background: transparent;
       cursor: pointer;
 
+      [disabled] {
+        cursor: initial !important;
+        opacity: 0.65;
+      }
+
       .m-posterActionBar__Label {
         margin-left: 0;
         margin-right: 4px;
@@ -354,5 +359,9 @@ m-hashtags-selector {
 
   .post-preview {
     border-top: 1px solid #e8e8e8;
+  }
+
+  .minds-bg-overlay {
+    z-index: 1;
   }
 }
