--- a/src/app/modules/notifications/notifications.component.scss
+++ b/src/app/modules/notifications/notifications.component.scss
@@ -130,5 +130,6 @@ m-notifications--topbar-toggle{
     left: 0;
     width: 100%;
     height: 100vh;
+    z-index: 998;
   }
 }
