--- a/src/stylesheets/components/mature.scss
+++ b/src/stylesheets/components/mature.scss
@@ -17,6 +17,7 @@
 
   .m-mature-message-content {
     white-space: pre-line;
+    word-wrap: break-word;
   }
 }
 
